# kubebeaver

./: .env.example  .gitignore  .versionrc.json  CHANGELOG.md  README.md  compose.yaml  package-lock.json  package.json
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_analyses_table.py  002_scan_runs_and_findings.py  003_scan_finding_occurred_at.py  004_incidents.py  005_scan_schedules.py
backend/app/: __init__.py  analyzer.py  cache.py  compare_service.py  config.py  diff_engine.py  heuristics.py  history.py  incident_service.py  k8s_client.py  logging_config.py  main.py  models.py  notifications.py  prompt.py  sanitize.py  scan_service.py  scanner.py  schedule_service.py  scheduler.py
backend/app/collectors/: __init__.py  metrics.py  node.py  pod.py  workload.py
backend/app/db/: __init__.py  factory.py  models.py  repository.py  session.py
backend/app/intelligence/: __init__.py  classifier.py  engine.py  scoring.py  signals.py
backend/app/llm/: __init__.py  base.py  factory.py  groq_provider.py  openai_compatible_provider.py
backend/app/routers/: api.py
backend/tests/: __init__.py  test_diff_engine.py  test_heuristics.py  test_incident_repository.py  test_intelligence_classifier.py  test_intelligence_signals.py  test_repository.py  test_scan_repository.py  test_scanner.py  test_schedule_repository.py
deploy/: README.md
deploy/k8s/: backend-config.yaml  backend-deployment.yaml  frontend-deployment.yaml  ingress.yaml  namespace.yaml  rbac.yaml
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
frontend/src/: App.new.tsx  App.tsx  App.tsx.backup  api.ts  index.css
frontend/src/components/: CategoryBadge.tsx  EmptyState.tsx  ErrorAlert.tsx  Layout.tsx  LoadingSkeleton.tsx  PageHeader.tsx  SeverityBadge.tsx  StatPills.tsx
frontend/src/components/layout/: AppShell.tsx
frontend/src/hooks/: useContexts.ts  useNamespaces.ts
frontend/src/pages/: AnalyzePage.tsx  ComparePage.tsx  HistoryPage.tsx  IncidentsPage.tsx  ScanPage.tsx  SchedulesPage.tsx
scripts/: extract-release-notes.js  version.js
(+2 files in other folders)
